motiv_fe/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motivfe
spec:
  selector:
    matchLabels:
      app: motivfe

  template:
    metadata:
      labels:
        app: motivfe
    spec:
      containers:
      - name: motivfe
        image: mackingsley/motiv_fe:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
