motiv_fe/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motivfe
spec:
  type: NodePort
  selector:
    app: motivfe
  ports:
  - port: 80
    targetPort: 80
